--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elad's Blog</title>
+    <title>Itamar's Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
@@ -11,7 +11,7 @@
     <header class="text-white text-center py-5">
         <div class="container">
             <img src="images/elad-profile.png" alt="Elad's Photo" class="rounded-circle mb-3" width="150" height="150">
-            <h1>Elad's Blog</h1>
+            <h1>Itamar's Blog</h1>
             <p class="lead">Exploring the world of tech, health, and cooking</p>
             <!-- Social media links -->
             <div class="social-links mt-3">
