--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="text-white text-center py-5">
         <div class="container">
-            <img src="images/elad-profile.png" alt="Elad's Photo" class="rounded-circle mb-3" width="150" height="150">
+            <img src="images/Itamar.JPEG" alt="Elad's Photo" class="rounded-circle mb-3" width="150" height="150">
             <h1>Itamar's Blog</h1>
             <p class="lead">Exploring the world of tech, health, and cooking</p>
             <!-- Social media links -->
