--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
 <body>
     <header class="text-white text-center py-5">
         <div class="container">
-            <img src="images/Itamar.JPEG" alt="Elad's Photo" class="rounded-circle mb-3" width="150" height="150">
+            <img src="images/Itamar.JPEG" alt="Itamar's Photo" class="rounded-circle mb-3" width="150" height="150">
             <h1>Itamar's Blog</h1>
             <p class="lead">Exploring the world of tech, health, and cooking</p>
             <!-- Social media links -->
             <div class="social-links mt-3">
                 <a href="https://www.facebook.com" class="text-white me-3" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
                 <a href="https://twitter.com" class="text-white me-3" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-                <a href="https://www.linkedin.com" class="text-white me-3" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/itamar-rahimi-27879b222/" class="text-white me-3" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
                 <a href="https://www.instagram.com" class="text-white" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
             </div>
         </div>
