--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,6 @@
             <!-- Social media links -->
             <div class="social-links mt-3">
                 <a href="https://www.facebook.com" class="text-white me-3" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="https://twitter.com" class="text-white me-3" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
                 <a href="https://www.linkedin.com/in/itamar-rahimi-27879b222/" class="text-white me-3" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
                 <a href="https://www.instagram.com" class="text-white" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
             </div>
@@ -26,7 +25,7 @@
     <main class="container my-5">
         <section>
             <h2>About Me</h2>
-            <p>Hello! I'm Elad, a former entrepreneur, digital health enthusiast, and passionate cook. I love sharing my journey, insights, and experiences in tech, health, and beyond. Welcome to my personal blog!</p>
+            <p>Hello! Hello! I'm Itamar, an economics and entrepreneurship graduate, former strategic analyst, and current product manager. I love sharing my journey, insights, and experiences in tech, health, and beyond. Welcome to my personal blog!</p>
         </section>
 
         <section>
