--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Post Title 1</h5>
                             <p class="card-text">A brief description of the first post. This is where I talk about my recent adventures in tech...</p>
-                            <a href="https://www.tripadvisor.co.il" class="btn btn-primary">Read More</a>
+                            <a href="newpage.html" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
