--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,10 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="images/post-image1.jpg" class="card-img-top" alt="Post Image 1">
+                        <img src="manhattan.webp" class="card-img-top" alt="Post Image 1">
                         <div class="card-body">
                             <h5 class="card-title">Post Title 1</h5>
-                            <p class="card-text">A brief description of the first post. This is where I talk about my recent adventures in tech...</p>
+                            <p class="card-text">About me</p>
                             <a href="newpage.html" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                         <img src="images/post-image2.jpg" class="card-img-top" alt="Post Image 2">
                         <div class="card-body">
                             <h5 class="card-title">Post Title 2</h5>
-                            <p class="card-text">A brief description of the second post. Here, I share my thoughts on the latest trends in digital health...</p>
+                            <p class="card-text">A</p>
                             <a href="https://www.tripadvisor.co.il" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
