--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="manhattan.webp" class="card-img-top" alt="Post Image 1">
+                        <img src="manhattan.jpeg" class="card-img-top" alt="Post Image 1">
                         <div class="card-body">
                             <h5 class="card-title">Post Title 1</h5>
                             <p class="card-text">About me</p>
