--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="images/manhattan.jpeg" class="card-img-top" alt="Post Image 1">
+                        <img src="images/manhattan.jpeg" class="card-img-top" alt="Post Image 1", height="500", width="50px">
                         <div class="card-body">
                             <h5 class="card-title">Post Title 1</h5>
                             <p class="card-text">About me</p>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="images/post-image2.jpg" class="card-img-top" alt="Post Image 2">
+                        <video src="https://content-yahoo.uplynk.com/event/73d5829c2006463686ee83ea005b2c08.m3u8?tc=1&exp=1720016789&rn=2&ct=e&cid=73d5829c2006463686ee83ea005b2c08&iph=172d881c7290b8d67a55cb0383be6e7e18c79bb9a6337dc6b1bde035d3de4f2e&ad.adUnit=%2Fus%2Fyfin%2Flive%2Fdt%2Fus_yfin_live_dt_video&ad.cust_params=lmsid%3Da0Vd000000FfzJyEAJ%26spaceid%3D1183300002%26bucket%3Dfin-qsp-densenews-1%2Ctaboola-article-enabled%2Crocket_GA_desk_test-3-v1%26site%3Dfinance%26region%3DUS%26lang%3Den-US&ad.description_url=https%3A%2F%2Ffinance.yahoo.com&ad.gdpr=1&ad.gdpr_consent=CQAWt0AQAWt0AAOACKHEA6EgAAAAAAAAACiQAAAAAAAA&ad.ltd=1&ad.npa=0&ad.paln=AQzzBGQECvsx0eBms3VbbLTyPuusIrwEtJ7Aarz9EYPMTr5jbtrQpXoXaYFNeevjGE2nXldlYBw-kHJlxHj8GqNSpUXegstvLNAOBgBP8RQvtYSCmvTcAK7aMIuTOndpvkCmJflGGFvYmfEeR5TrUv5A88MLfQwpx8kxRJEcExYQ7kCihhvcnOBa71RBzb0lcdyR3EFTwwXyT9rI2I6U__Q7Gb-JHg86gHyk2acV5yda0JRbwaVKCsoUprgg9S4iZFAsVMUuOSDtBlASpm0n0Df9KX-13g0K4aMBKzHu1lJpQLDQzmo0bV0BC51_asResywP6A6iSXJ2KtsHynMFVWielXGUKzRQZboDhvI-Cbz4CjJn5tuIMiTX8cxgs3fclFbI0fAF5dq8tT5VJxcThSb3EmKR1SjrwN_1xDZa7o83rIzjAitmjCKoiscFhdnuBbxJPEEQoDFAxUiZMUwGgMwVtEzEDpDbjaozyfLO_P3fdPfWyEbtLh_wmhmk7saE7QXcutiIwbyzO6jsP410vvEHkTmKwcJ2cHKCUkkjUJVPQqBdhym0DAZu-VgSv2InGHkMAPUl1GAd13KO0SLRMnrN0rlNlQX2sV9OMgz6HR_73KAOpfZdfg7c8MyGsYTJr2doBuN2MQlVA-Sm1BSRBPKYI5ZuYvEPlsFjcnBb_55_wPTXp6FmIR7XVJdVe4_B511-C94ERQA4zCKYmSuwss5XZbTlHStIPu4R6Giw6mSTYtACbfRKp0ImQhQQYk52a4SLGaBmGgop0gg-GRQdwDYtQ6PGut4Rp6T_AQLrACDN9DflvekaBUhLNaxvDeRVHf2HTHshnbIVYjgQxK0B4k4sNiLP9UZWuMyKmyBnCjeL3sZPVyv6lzGH7bZbEp-3VtMT5FshPUkyJkAoQJkYnCQlXq_wvCD4P4nAzIhnVlAS1hIYaUbaRJltyL0agyCgmRkmb6xrGniyiEbeWRn4IKqJ5uLhuclhUWKSlVlEzRllUWQUAT4diUxDDoVQ42aLz0gk_8mH20HfZ8c6h5_u_qUC33BZ3cPc4c7YyQv7QTaA2E29bJHL0Yc.&ad.url=https%3A%2F%2Ffinance.yahoo.com&ad.us_privacy=1---&expand=gam&rays=defabc&secure=true&sig=b6fcef894c117ef1b43b878e20c581b2eb262f31710e43fdb3a96be16a80130c" class="card-img-top" alt="Post Image 2">
                         <div class="card-body">
                             <h5 class="card-title">Post Title 2</h5>
                             <p class="card-text">A</p>
